--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <!--本体-->
                 <div class="card-body" id="timer">
-                        <input type="number" name="timer-s" class="timer-input" min="0" max="24" oninput="javascript: this.value = this.value.slice(0, 2);">
-                        <input type="number" name="timer-s" class="timer-input" min="0" max="60" oninput="javascript: this.value = this.value.slice(0, 2);">
+                        <input type="number" name="timer-h" class="timer-input" min="0" max="24" oninput="javascript: this.value = this.value.slice(0, 2);">
+                        <input type="number" name="timer-m" class="timer-input" min="0" max="60" oninput="javascript: this.value = this.value.slice(0, 2);">
                         <input type="number" name="timer-s" class="timer-input" min="0" max="60" oninput="javascript: this.value = this.value.slice(0, 2);">
                         <br>
                         <button name="timer-start" id="timer-start" class="timer-button">Start</button>
